// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Builtin resources, STDIO should expose expected resources and templates 1`] = `
{
  "resourceNames": [
    "patternfly://context",
    "patternfly://docs/index",
    "patternfly://schemas/index",
  ],
  "templateNames": [
    "patternfly://docs/{name}",
    "patternfly://schemas/{name}",
  ],
}
`;

exports[`Builtin tools, STDIO should concatenate headers and separator with two local files 1`] = `
"# Documentation from documentation/guidelines/README.md

# PatternFly Development Rules
            This is a generated offline fixture used by the MCP external URLs test.

            Essential rules and guidelines working with PatternFly applications.

            ## Quick Navigation

            ### 🚀 Setup & Environment
            - **Setup Rules** - Project initialization requirements
            - **Quick Start** - Essential setup steps
            - **Environment Rules** - Development configuration

---

# Documentation from documentation:components/README.md

# PatternFly Development Rules
            This is a generated offline fixture used by the MCP external URLs test.

            Essential rules and guidelines working with PatternFly applications.

            ## Quick Navigation

            ### 🚀 Setup & Environment
            - **Setup Rules** - Project initialization requirements
            - **Quick Start** - Essential setup steps
            - **Environment Rules** - Development configuration"
`;

exports[`Builtin tools, STDIO should concatenate headers and separator with two remote files 1`] = `
"# Documentation from http://127.0.0.1:5010/notARealPath/README.md

# PatternFly Development Rules
            This is a generated offline fixture used by the MCP external URLs test.

            Essential rules and guidelines working with PatternFly applications.

            ## Quick Navigation

            ### 🚀 Setup & Environment
            - **Setup Rules** - Project initialization requirements
            - **Quick Start** - Essential setup steps
            - **Environment Rules** - Development configuration

---

# Documentation from http://127.0.0.1:5010/notARealPath/AboutModal.md

# Test Document

This is a test document for mocking remote HTTP requests."
`;

exports[`Builtin tools, STDIO should expose expected tools and stable shape 1`] = `
{
  "toolNames": [
    "componentSchemas",
    "searchPatternFlyDocs",
    "usePatternFlyDocs",
  ],
}
`;

exports[`Logging should allow setting logging options, default 1`] = `[]`;

exports[`Logging should allow setting logging options, stderr 1`] = `
[
  "[INFO]: Server logging enabled.
",
  "[INFO]: Server stats enabled.
",
  "[INFO]: No external resources loaded.
",
  "[INFO]: No external tools loaded.
",
  "[INFO]: Registered resource: patternfly-context
",
  "[INFO]: Registered resource: patternfly-docs-index
",
  "[INFO]: Registered resource: patternfly-docs-template
",
  "[INFO]: Registered resource: patternfly-schemas-index
",
  "[INFO]: Registered resource: patternfly-schemas-template
",
  "[INFO]: Registered tool: usePatternFlyDocs
",
  "[INFO]: Registered tool: searchPatternFlyDocs
",
  "[INFO]: Registered tool: componentSchemas
",
  "[INFO]: @patternfly/patternfly-mcp server running on stdio transport
",
]
`;

exports[`Logging should allow setting logging options, with log level filtering 1`] = `[]`;

exports[`Logging should allow setting logging options, with mcp protocol 1`] = `
[
  {
    "method": "notifications/message",
    "params": {
      "data": "@patternfly/patternfly-mcp server running on stdio transport",
      "level": "info",
      "logger": "@patternfly/patternfly-mcp",
    },
  },
]
`;

exports[`Tools should interact with a tool, echo basic tool 1`] = `
{
  "args": {
    "dolor": "sit amet",
    "lorem": "ipsum",
    "type": "echo",
  },
  "content": [
    {
      "text": "{"type":"echo","lorem":"ipsum","dolor":"sit amet"}",
      "type": "text",
    },
  ],
  "options": [
    "serverName",
    "serverVersion",
    "nodeMajor",
    "repoName",
  ],
}
`;

exports[`Tools should interact with a tool, echo create MCP tool 1`] = `
{
  "args": {
    "dolor": "sit amet",
    "lorem": "ipsum",
    "type": "echo",
  },
  "content": [
    {
      "text": "{"type":"echo","lorem":"ipsum","dolor":"sit amet"}",
      "type": "text",
    },
  ],
}
`;
